# nonebot-plugin-R6States

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  fetcher.py  formatter.py  parser.py  pyproject.toml  requirements.txt
nonebot-plugin-R6States/: __init__.py  fetcher.py  main.py
nonebot-plugin-R6TrackerAPI/: CMakeLists.txt  __init__.py  config.py  fetcher.py  formatter.cp312-win_amd64.pyd  formatter.cpp  formatter.pyi  parser.py  player.hpp
nonebot_plugin_R6States/: __init__.py  config.py  config_mannger.py  formatter.cp312-win_amd64.pyd  formatter.cpp
src/nonebot_plugin_R6States/: __init__.py  analyser.cpp  config.py  fetcher.py  formatter2.py  parser.py  test.py
